# codebase-onboarding-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  project_spec.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AgentFilesTab.tsx  DashboardTab.tsx  QATab.tsx  ReportTab.tsx
frontend/src/pages/: ProgressPage.tsx  ResultsPage.tsx  SubmitPage.tsx
frontend/src/types/: index.ts
src/onboarding_agent/: __init__.py  cli.py
src/onboarding_agent/api/: app.py  job_manager.py
src/onboarding_agent/api/routes/: analyze.py  qa.py
src/onboarding_agent/config/: __init__.py  settings.py
src/onboarding_agent/models/: __init__.py  state.py  types.py
src/onboarding_agent/parsers/: __init__.py  base.py  python_parser.py  typescript_parser.py
src/onboarding_agent/pipeline/: __init__.py  graph.py
src/onboarding_agent/pipeline/nodes/: agent_file_generator.py  ai_readiness_scorer.py  dependency_analyzer.py  doc_generator.py  final_assembler.py  module_deep_diver.py  output_router.py  pattern_detector.py  readiness_report.py  structure_scanner.py
src/onboarding_agent/services/: __init__.py  cache.py  github.py  llm.py
src/onboarding_agent/utils/: __init__.py  logging.py
tests/: conftest.py
tests/fixtures/sample_repos/python_app/: main.py
tests/fixtures/sample_repos/ts_app/: index.ts
tests/integration/: test_pipeline.py
tests/unit/: test_models.py  test_parsers.py  test_services.py
