[project]
name = "codebase-onboarding-agent"
version = "0.1.0"
description = "LangGraph-powered codebase analysis agent that generates onboarding docs, AI context files, and readiness scores"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.1",
    "langchain-google-genai>=2.1.0",
    "langsmith>=0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.9.0",
    "httpx>=0.28.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "structlog>=25.1.0",
    "litellm>=1.60.0",
    "gitpython>=3.1.0",
    "aiosqlite>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]

[project.scripts]
onboarding-agent = "onboarding_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onboarding_agent"]

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "S",     # flake8-bandit (security)
    "T20",   # flake8-print (no print statements)
    "PTH",   # flake8-use-pathlib
    "ASYNC", # flake8-async
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S108"]
"tests/fixtures/**/*.py" = ["S101", "S106", "S108", "S201", "F401", "T20"]
"src/onboarding_agent/config/settings.py" = ["S104", "S108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_javascript.*",
    "tree_sitter_typescript.*",
    "litellm.*",
    "langgraph.*",
    "langchain_google_genai.*",
]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=onboarding_agent",
    "--cov-report=term-missing",
]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (may need services)",
    "slow: Slow tests (skipped by default)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:litellm.*",
]

# ---------- Coverage ----------
[tool.coverage.run]
source = ["src/onboarding_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
